Fix jdk8 tests.